Yay, JavaFX application is running with Spring Boot beans!